# workplace-email-utils

./: .gitignore  Makefile  README.md  TESTING.md  agent.demo.yaml  manifest.json  pyproject.toml  requirements.txt  spec.md
.github/workflows/: tests.yml
docs/: business_lens.rst  conf.py  overview.rst
docs/_build/html/: .buildinfo  api.html  business_lens.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  runbook.html  search.html  searchindex.js
examples/: README.md  basic_usage.py  knowledge_base_example.py  network_analysis.py  reporting.py  request.json  response.json
schemas/: request.schema.json  response.schema.json
scripts/: setup_venv.sh
src/agent_email_extract_non_nlp/: __init__.py  agent.py  api.py  config.py  schemas.py
src/agent_email_extract_non_nlp/adapters/: __init__.py
src/agent_email_extract_non_nlp/models/: __init__.py
src/agent_email_extract_non_nlp/pipelines/: __init__.py
src/agent_email_extract_non_nlp/prompts/: __init__.py
src/agent_email_extract_non_nlp/services/: __init__.py
src/agent_email_extract_non_nlp/utils/: __init__.py
src/workplace_email_utils/: __init__.py  pipeline.py
src/workplace_email_utils/anomaly_detection/: __init__.py  communication_patterns.py  content.py  network.py  temporal.py
src/workplace_email_utils/classification/: __init__.py  action_detection.py  category.py  dataset_loader.py  priority.py  unified.py
src/workplace_email_utils/clustering/: __init__.py  cluster.py
src/workplace_email_utils/content_features/: __init__.py  extractors.py
src/workplace_email_utils/distributed/: __init__.py  (+2 more)
tests/: test_agent_smoke.py  test_contract.py  test_examples.py  test_manifest.py
(+53 files in other folders)
